--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 body {
     background-color: #E7F1F1;
     display:flex;
-    flex-direction:column;
+    flex-direction:row;
     font-family: "Poppins", sans-serif;
 
 }
@@ -27,27 +27,25 @@ h1 {
    }
 
 .label-grid{
-    display: inline-flex;
+    display: flex;
     justify-content: center;
-    text-align: center;
-    align-items:center;
+    align-items:flex-end;
+    margin: 5px;
     
    }
-.box{
+.box {
     display: flex;
-    justify-content: flex-end;
+    flex-direction: column-reverse;
+    justify-content: space-between;
     align-items: flex-end;
     width: 7rem;
     height: 7rem;
     border-color: black;
     border: solid 3px;
-    margin:5px;
-    /* src: 
-    display: hidden or none */
-    }
+    margin: 5px;
+   }
 
 .color {
-    display:flex;
     padding-left: 28px;
     padding-right: 28px;
    }
@@ -72,16 +70,9 @@ h1 {
     background-color:#A4C4CA;
 }
 
-.button-grid{
-    justify-content: center;
-    align-items: center;
-    display: flex;
-    margin: 45px;
-  }
- 
 .icon {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: flex-end;
     align-items: flex-end;
     margin: 5px;
@@ -89,15 +80,14 @@ h1 {
     width: 20px;
 }
 
-.button-grid{
+.button-grid {
     display: flex;
     align-items: center;
     margin-top:80px;
-    justify-content:center;
-    width:
+    justify-content:space-evenly;
   }
   
-.palettes {
+.paletteButtons {
     width: 8rem;
     height: 2rem;
     background-color: black;
@@ -109,24 +99,30 @@ h1 {
     font-style: normal;
     font-size: 13px;
     border: 0;
+    margin: 15px;
   }
-.savePalette {
-    width: 8rem;
-    height: 2rem;
-    background-color: black;
-    color: white;
-    border-top-right-radius: 25rem;
-    border-bottom-left-radius: 25rem;
-    justify-content: center;
-    text-align: center;
-    font-style: normal;
-    font-size: 13px;
-    border: 0;
+
+  .saved-palettes-section {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    border-left: 5px solid black;
+    height: 100vh;
 }
 
-.saved-palettes-section {
-    display:flex;
-    flex-direction:column;
-    justify-content:center;
-    align-items: center;
+.miniBoxes {
+    display: flex;
+    justify-content: space-evenly;
+    align-content: center;
+    flex-direction: row;
+    width: 2rem;
+    height: 2rem;
+    border-color: black;
+    border: solid 3px;
+    margin: 5px;
+}
+
+.hidden{
+    display: none;
 }
